tests/language_modules/04_types/invalid_semantics/redefine_builtin_type.vf
module RedefineBuiltinType

type Integer is Double

end RedefineBuiltinType